--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "api_v2",
+  "name": "api",
   "version": "2.0.0",
   "description": "Rest api server",
   "author": "",
@@ -32,6 +32,7 @@
     "@nestjs/platform-express": "^8.0.9",
     "@nestjs/swagger": "^5.1.0",
     "@prisma/client": "^3.1.1",
+    "@types/bcrypt": "^5.0.0",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
